# pyscope

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/plantree/: README.md
docs/plantree/baseline/: module-map.md  risk-hotspots.md  runtime-flows.md  storage-and-state.md  test-and-release-gates.md
docs/plantree/ideas/: inbox.md
docs/plantree/plans/initial-build/: implementation-status.md  open-questions.md  roadmap.md
src/: cli.rs  config.rs  llm.rs  main.rs  model.rs  report.rs  store.rs
src/analyze/: async_map.rs  decorator_usage.rs  deps.rs  diff.rs  fanout.rs  hotspots.rs  mod.rs  refactor_order.rs  test_impact.rs  type_coverage.rs
src/analyzer/: builder.rs  helpers.rs  index.rs  mod.rs  visitors.rs
src/ci/: check.rs
src/nav/: clusters.rs  entries.rs  guide.rs  health.rs  map.rs  mod.rs  quality.rs
src/query/: commands.rs  export.rs  filter.rs  find.rs  index.rs  mod.rs  risk.rs  similar.rs  source.rs  traversal.rs
src/rag/: embedding.rs  lexical.rs  mod.rs  rerank.rs
src/semantic/: helpers.rs  mod.rs
